# flowproof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml  rebuild-website-docs.yml  sap-e2e.yml  site-tests.yml
.loop/: STATE.md
crates/flowproof-adapters/: Cargo.toml
crates/flowproof-adapters/src/: agent_proxy.rs  agent_runner.rs  egress.rs  egress_linux.rs  lib.rs  mcp_core.rs  mcp_http.rs  mcp_stdio.rs  sap_com.rs  vision.rs  web.rs
crates/flowproof-agent/: Cargo.toml
crates/flowproof-agent/src/: agent_steps.rs  author.rs  clarify.rs  heal.rs  lib.rs  llm.rs  recorder.rs  rules.rs  spec.rs
crates/flowproof-cli/: Cargo.toml
crates/flowproof-cli/src/: agent_flow.rs  capture.rs  lib.rs  main.rs
crates/flowproof-cli/tests/: agent_flow_e2e.rs  api_pipeline.rs  audit_record_e2e.rs  calc_e2e.rs  clock_e2e.rs  egress_e2e.rs  examples_resolve.rs  grid_cell_e2e.rs  llm_author_e2e.rs  mcp_stdio_e2e.rs  notepad_author_e2e.rs  notepad_e2e.rs  sap_e2e.rs  sap_pipeline.rs  sap_sim_e2e.rs  scoped_container_e2e.rs  skip_unless_env.rs  suite_env_from.rs  suite_flow_isolation.rs  suite_missing_trace.rs  vision_pipeline.rs  web_e2e.rs
crates/flowproof-cli/tests/support/: sap_simulator.py
crates/flowproof-driver/: Cargo.toml
crates/flowproof-driver/src/: app.rs  backend.rs  gdi.rs  lib.rs  mock.rs  oob.rs  recording.rs  redact.rs  visual.rs  window.rs
crates/flowproof-python/: Cargo.toml
crates/flowproof-python/src/: lib.rs
crates/flowproof-replay/: Cargo.toml
crates/flowproof-replay/src/: lib.rs  report.rs  runrecord.rs
crates/flowproof-replay/tests/: replay_calc.rs
crates/flowproof-trace/: Cargo.toml
crates/flowproof-trace/schema/: trace-v1.schema.json
crates/flowproof-trace/src/: cassette.rs  cassette_diff.rs  egress.rs  format.rs  lib.rs  secret.rs  secret_scan.rs  substitution.rs  toolcalls.rs
crates/flowproof-trace/tests/: schema_conformance.rs
crates/flowproof-trace/tests/fixtures/: sample.trace.jsonl
docs/: agent-testing.md  authoring.md  capture.md  comparison.md  design.md  getting-started.md  recording.md  security-regression.md  self-help.md  trace-format.md
examples/: calc.flow.yaml  notepad.flow.yaml  web.flow.yaml
examples/access-control/: assistant-no-leak.flow.yaml  suite.yaml  viewer-cannot-delete.flow.yaml
examples/agent-demo/: weather.flow.yaml  weather_agent.py
examples/api/: connection-test.flow.yaml  health.flow.yaml
examples/fiori/: manage-info-records.flow.yaml  suite.yaml
examples/sap/: create-order.flow.yaml  create-order.trace.jsonl  session-status.flow.yaml  session-status.trace.jsonl  stock-overview.flow.yaml  stock-overview.trace.jsonl  view-order.flow.yaml  view-order.trace.jsonl
examples/site/automators/: about.flow.yaml  agentic-migrator.flow.yaml  career.flow.yaml  get-in-touch.flow.yaml  home.flow.yaml  legal-notice.flow.yaml
examples/vision/: post-order.flow.yaml
examples/web/: cards.html  greeter.html  grid.html  list.html  today.html
migration-drafts/datamaker/: GAPS.md  README.md
migration-drafts/datamaker/specs/account-settings/: toggle-autosave.flow.yaml
migration-drafts/datamaker/specs/connections/: copy-connection-id.flow.yaml  create-api-connection.flow.yaml  create-db-connection.flow.yaml  delete-api-connection.flow.yaml  delete-db-connection.flow.yaml  discard-connection.flow.yaml  edit-db-connection.flow.yaml  export-connection.flow.yaml  filter-connections.flow.yaml  modal-navigation.flow.yaml  test-connection-button.flow.yaml
migration-drafts/datamaker/specs/demo/: chat-agent-pipeline.flow.yaml  chat-composer.flow.yaml  connect-cat-facts-api.flow.yaml  connect-postgres.flow.yaml  generate-template-export.flow.yaml  team-api-key.flow.yaml
migration-drafts/datamaker/specs/team-settings/: api-key-lifecycle.flow.yaml  invite-team-member.flow.yaml  remove-team-member.flow.yaml  update-team-info.flow.yaml
migration-drafts/datamaker/specs/template-folders/: create-folder.flow.yaml  delete-folder.flow.yaml  export-folder.flow.yaml  open-template-form-from-folder.flow.yaml  rename-folder.flow.yaml  ungroup-folder.flow.yaml
migration-drafts/datamaker/specs/templates/: copy-template-id.flow.yaml  create-template.flow.yaml  delete-template.flow.yaml  discard-template.flow.yaml  duplicate-template.flow.yaml  edit-template.flow.yaml  expand-collapse-fields.flow.yaml  export-template.flow.yaml  filter-templates.flow.yaml
scripts/: sap-session-bootstrap.ps1
sdk/js/: README.md  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/flowproof/: __init__.py  cli.py  flow.py  mcp_server.py
sdk/python/tests/: test_api.py  test_mcp.py
