[package]
name = "flowproof-adapters"
description = "Native application adapters (SAP GUI Scripting COM, WebDriver/CDP) behind feature flags"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sap-com = []
web = []

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
