[package]
name = "flowproof-adapters"
description = "Native application adapters (SAP GUI Scripting COM, browser via CDP) behind feature flags"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sap-com = []
web = ["dep:headless_chrome"]

[dependencies]
flowproof-driver = { workspace = true }
headless_chrome = { version = "1", optional = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }
thiserror = { workspace = true }

[lints]
workspace = true
