[package]
name = "flowproof-adapters"
description = "Native application adapters (SAP GUI Scripting COM, browser via CDP) behind feature flags"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sap-com = ["dep:windows"]
web = ["dep:headless_chrome"]
# Pixels-only (Citrix/RDP) driving: OCR perception via ocrs/rten, model
# download via ureq.
vision = ["dep:ocrs", "dep:rten", "dep:ureq"]

[dependencies]
flowproof-driver = { workspace = true }
headless_chrome = { version = "1", optional = true }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
thiserror = { workspace = true }
ocrs = { version = "0.12", optional = true }
# Must track the rten version ocrs builds against (models are versioned).
rten = { version = "0.24", optional = true }
ureq = { version = "3", features = ["platform-verifier"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    # StructuredStorage gates the VARIANT -> BSTR conversions.
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
], optional = true }

[lints]
workspace = true
