[package]
name = "flowproof-agent"
description = "Recording agent: planner loop with pluggable computer-use model backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
flowproof-driver = { workspace = true }
flowproof-trace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3", features = ["platform-verifier", "json"] }
uuid = { workspace = true }

[lints]
workspace = true
