[package]
name = "flowproof-cli"
description = "flowproof command line: record, run, heal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "flowproof_cli"
path = "src/lib.rs"

[[bin]]
name = "flowproof"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
flowproof-adapters = { workspace = true, features = ["web", "sap-com"] }
flowproof-agent = { workspace = true }
flowproof-driver = { workspace = true }
flowproof-replay = { workspace = true }
flowproof-trace = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
tiny_http = "0.12"
