[package]
name = "flowproof-cli"
description = "flowproof command line: record, run, heal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "flowproof_cli"
path = "src/lib.rs"

[[bin]]
name = "flowproof"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
# Cross-platform Ctrl-C handling for the long-lived `capture` listener, so a
# deliberate interrupt exits 0 cleanly on Windows and Unix alike. Light: no
# async runtime, just a signal handler.
ctrlc = "3"
flowproof-adapters = { workspace = true, features = ["web", "sap-com", "vision", "agent"] }
flowproof-agent = { workspace = true }
flowproof-driver = { workspace = true }
flowproof-replay = { workspace = true }
flowproof-trace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde_yaml = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tiny_http = "0.12"
# Synthetic screens for the real-OCR vision pipeline test.
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
