[package]
name = "flowproof-driver"
description = "Native driver: screen capture, input injection, UI Automation client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"

[lints]
workspace = true
