[package]
name = "flowproof-driver"
description = "Native driver: screen capture, input injection, UI Automation client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"
windows = { version = "0.62", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
