[package]
name = "flowproof-driver"
description = "Native driver: screen capture, input injection, UI Automation client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Out-of-band probes (SQL / HTTP) for business-data assertions.
oob = ["dep:ureq", "dep:postgres"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3", features = ["platform-verifier", "json"], optional = true }
postgres = { version = "0.19", optional = true }

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"
windows = { version = "0.62", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[lints]
workspace = true
