[package]
name = "flowproof-python"
description = "Python bindings: the flowproof._native extension module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "flowproof_native"
crate-type = ["cdylib"]

[dependencies]
flowproof-agent = { workspace = true }
flowproof-cli = { workspace = true }
flowproof-driver = { workspace = true }
flowproof-replay = { workspace = true }
pyo3 = { version = "0.26", features = ["abi3-py39", "extension-module"] }

[lints]
workspace = true
