[package]
name = "flowproof-replay"
description = "Deterministic trace executor: replays compiled traces with zero LLM calls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
flowproof-driver = { workspace = true }
flowproof-trace = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
