[package]
name = "flowproof-replay"
description = "Deterministic trace executor: replays compiled traces with zero LLM calls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
flowproof-driver = { workspace = true, features = ["oob"] }
flowproof-trace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
flowproof-agent = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }

[lints]
workspace = true
