[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "flowproof"
version = "0.1.0"
description = "AI-native E2E testing for the apps Selenium can't reach — SAP GUI, Oracle Forms, Citrix, Windows desktop."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Automators", email = "hello@automators.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
flowproof = "flowproof.cli:main"

[project.urls]
Homepage = "https://github.com/automators-com/flowproof"
Repository = "https://github.com/automators-com/flowproof"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.maturin]
manifest-path = "../../crates/flowproof-python/Cargo.toml"
module-name = "flowproof._native"
python-source = "."
features = ["pyo3/abi3-py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
