[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "flowproof"
version = "0.2.3"
description = "Generic open-source automation framework for the AI-agent era: automated testing and agentic process automation across web, desktop, and Citrix."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Automators", email = "hello@automators.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2; python_version >= '3.10'"]

[project.scripts]
flowproof = "flowproof.cli:main"
flowproof-mcp = "flowproof.mcp_server:main"

[project.urls]
Homepage = "https://github.com/automators-com/flowproof"
Repository = "https://github.com/automators-com/flowproof"

[dependency-groups]
dev = [
    "mcp>=1.2; python_version >= '3.10'",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.uv]
# The wheel embeds the Rust engine: rebuild when any crate changes, not just
# when pyproject.toml does.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "../../Cargo.lock" },
    { file = "../../crates/**/*.rs" },
    { file = "../../crates/**/Cargo.toml" },
]

[tool.maturin]
manifest-path = "../../crates/flowproof-python/Cargo.toml"
module-name = "flowproof._native"
python-source = "."
features = ["pyo3/abi3-py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
